extend zope-stable

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 develop = .
 parts = test
+extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
 
 [test]
 recipe = zc.recipe.testrunner
