use trunk version of z3c.form, existing releases do not support Sources

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,17 @@
 [buildout]
 develop = .
-parts = test
+parts = libxml2 libxslt lxml deveggsvn z3c.form test
 extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
+          http://svn.gocept.com/repos/gocept/gocept.lxml/trunk/buildout-lxml.cfg
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = gocept.autocomplete[test]
+
+[deveggsvn]
+recipe = infrae.subversion
+urls = svn://svn.zope.org/repos/main/z3c.form/trunk z3c.form
+
+[z3c.form]
+recipe = zc.recipe.egg:develop
+setup = ${deveggsvn:location}/z3c.form
