--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 develop = .
-parts = libxml2 libxslt lxml deveggsvn z3c.form test
+parts = libxml2 libxslt lxml deveggsvn z3c.form test demo selenium
 extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
           http://svn.gocept.com/repos/gocept/gocept.lxml/trunk/buildout-lxml.cfg
 
@@ -15,3 +15,36 @@ urls = svn://svn.zope.org/repos/main/z3c.form/trunk z3c.form
 [z3c.form]
 recipe = zc.recipe.egg:develop
 setup = ${deveggsvn:location}/z3c.form
+
+### Selenium tests
+
+[application]
+recipe = zc.zope3recipes:application
+servers = zserver
+eggs = ${test:eggs}
+site.zcml =
+    <include package="gocept.autocomplete" file="ftesting.zcml" />
+    <include package="zope.app.server"/>
+
+[demo]
+recipe = zc.zope3recipes:instance
+application = application
+zope.conf =
+    devmode on
+    <zodb>
+      <demostorage>
+      </demostorage>
+    </zodb>
+    <server http0>
+      address 9090
+      type WSGI-HTTP
+    </server>
+
+[selenium]
+recipe = zc.recipe.egg:scripts
+eggs = ${application:eggs}
+scripts = selenium
+entry-points = selenium=zc.selenium.selenium:main
+initialization =
+    sys.argv[1:1] = ['${demo:run-directory}/zope.conf', '-r']
+ 
