the appserver seems to need zope.app.server explicitly

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,6 +22,7 @@ setup = ${deveggsvn:location}/z3c.form
 recipe = zc.zope3recipes:application
 servers = zserver
 eggs = ${test:eggs}
+     zope.app.server
 site.zcml =
     <include package="gocept.autocomplete" file="ftesting.zcml" />
     <include package="zope.app.server"/>
