first stab at a selenium test. It currently fails, I guess because something about the authentication does not work.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -37,13 +37,14 @@ zope.conf =
       </demostorage>
     </zodb>
     <server http0>
-      address 9090
+      address 39857
       type WSGI-HTTP
     </server>
 
 [selenium]
 recipe = zc.recipe.egg:scripts
 eggs = ${application:eggs}
+    wsgiref
 scripts = selenium
 entry-points = selenium=zc.selenium.selenium:main
 initialization =
