added missing dependency for running a server

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,6 +23,7 @@ recipe = zc.zope3recipes:application
 servers = zserver
 eggs = ${test:eggs}
      zope.app.server
+     zope.app.zapi
 site.zcml =
     <include package="gocept.autocomplete" file="ftesting.zcml" />
     <include package="zope.app.server"/>
@@ -49,4 +50,3 @@ scripts = selenium
 entry-points = selenium=zc.selenium.selenium:main
 initialization =
     sys.argv[1:1] = ['${demo:run-directory}/zope.conf', '-r']
- 
