use infrae.subversions as_eggs feature instead of doing it manually

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 develop = .
-parts = libxml2 libxslt lxml deveggsvn z3c.form test demo selenium
+parts = libxml2 libxslt lxml deveggsvn test demo selenium
 extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
           http://svn.gocept.com/repos/gocept/gocept.lxml/trunk/buildout-lxml.cfg
 
@@ -11,10 +11,7 @@ eggs = gocept.autocomplete[test]
 [deveggsvn]
 recipe = infrae.subversion
 urls = svn://svn.zope.org/repos/main/z3c.form/trunk z3c.form
-
-[z3c.form]
-recipe = zc.recipe.egg:develop
-setup = ${deveggsvn:location}/z3c.form
+as_eggs = True
 
 ### Selenium tests
 
