--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,17 @@ develop = .
 parts = libxml2 libxslt lxml deveggsvn test demo selenium
 extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
           http://svn.gocept.com/repos/gocept/gocept.lxml/trunk/buildout-lxml.cfg
+          /home/ctheune/Development/kita/profiles/versions.cfg
+versions = versions
+
+[versions]
+zc.recipe.testrunner = 1.2.0
+zc.recipe.egg=1.2.0
+zc.zope3recipes = 0.11.0
+zc.selenium = 1.3.0dev-r97282
+wsgiref = 0.1.2
+lxml = 2.2.4
+gocept.autocomplete = 0.3dev
 
 [test]
 recipe = zc.recipe.testrunner
@@ -12,6 +23,7 @@ eggs = gocept.autocomplete[test]
 recipe = infrae.subversion
 urls = svn://svn.zope.org/repos/main/z3c.form/trunk z3c.form
 as_eggs = True
+
 
 ### Selenium tests
 
