--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,28 +1,24 @@
 [buildout]
 develop = .
-parts = libxml2 libxslt lxml deveggsvn test demo selenium
-extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
-          http://svn.gocept.com/repos/gocept/gocept.lxml/trunk/buildout-lxml.cfg
-          /home/ctheune/Development/kita/profiles/versions.cfg
+parts = lxml test demo selenium
+extends = http://download.zope.org/zope3.4/3.4.0/versions.cfg
 versions = versions
 
 [versions]
-zc.recipe.testrunner = 1.2.0
-zc.recipe.egg=1.2.0
-zc.zope3recipes = 0.11.0
-zc.selenium = 1.3.0dev-r97282
-wsgiref = 0.1.2
 lxml = 2.2.4
-gocept.autocomplete = 0.3dev
+z3c.form = 2.0
+zc.selenium = 1.3.0dev-r97282
+zope.container=3.7.2
+zope.site = 3.6.0
+zope.testbrowser = 3.5.1
+
+[lxml]
+recipe = z3c.recipe.staticlxml
+egg = lxml
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = gocept.autocomplete[test]
-
-[deveggsvn]
-recipe = infrae.subversion
-urls = svn://svn.zope.org/repos/main/z3c.form/trunk z3c.form
-as_eggs = True
 
 
 ### Selenium tests
