--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 develop = .
-parts = lxml test demo selenium
+parts = lxml test
 extends = http://download.zope.org/zope3.4/3.4.0/versions.cfg
 versions = versions
 
@@ -19,39 +19,3 @@ egg = lxml
 [test]
 recipe = zc.recipe.testrunner
 eggs = gocept.autocomplete[test]
-
-
-### Selenium tests
-
-[application]
-recipe = zc.zope3recipes:application
-servers = zserver
-eggs = ${test:eggs}
-     zope.app.server
-     zope.app.zapi
-site.zcml =
-    <include package="gocept.autocomplete" file="ftesting.zcml" />
-    <include package="zope.app.server"/>
-
-[demo]
-recipe = zc.zope3recipes:instance
-application = application
-zope.conf =
-    devmode on
-    <zodb>
-      <demostorage>
-      </demostorage>
-    </zodb>
-    <server http0>
-      address 9090
-      type WSGI-HTTP
-    </server>
-
-[selenium]
-recipe = zc.recipe.egg:scripts
-eggs = ${application:eggs}
-    wsgiref
-scripts = selenium
-entry-points = selenium=zc.selenium.selenium:main
-initialization =
-    sys.argv[1:1] = ['${demo:run-directory}/zope.conf', '-r']
