--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,14 @@
 [buildout]
 develop = .
 parts = lxml test
-extends = http://download.zope.org/zope3.4/3.4.0/versions.cfg
+extends = http://download.zope.org/zopetoolkit/index/1.1.6/ztk-versions.cfg
+          http://download.zope.org/zopetoolkit/index/1.1.6/zopeapp-versions.cfg
 versions = versions
 
 [versions]
-lxml = 2.2.4
+setuptools = 18.7.1
 z3c.form = 2.0
 zc.selenium = 1.3.0dev-r97282
-zope.container=3.7.2
-zope.site = 3.6.0
-zope.testbrowser = 3.5.1
 
 [lxml]
 recipe = z3c.recipe.staticlxml
